--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=agendamento
+spring.datasource.url=jdbc:mysql://localhost/cadastro?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=anny
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
